<resources>
    <string name="app_name">MobilePhone</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="action_login">Log In</string>
    <string name="action_create_account">Create Account</string>
    <string name="logisteps_logo">Logisteps Logo</string>
    <string name="title_activity_login2">Sign in</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="Email">Email</string>
    <string name="left_foot_size">Left Foot Size</string>
    <string name="right_foot_size">Right Foot Size</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="height_in">Height (inches)</string>
    <string name="weight_lbs">Weight (lbs)</string>
    <string name="create">Create</string>
    <string name="error_shoe_size">Invalid Shoe Size</string>
    <string name="error_first_name">Invalid First Name</string>
    <string name="error_last_name">Invalid Last Name</string>
    <string name="error_height">Invalid Height</string>
    <string name="error_weight">Invalid Weight</string>
    <string name="error_step_goal">Invalid Step Goal</string>
    <string name="error_user_taken">Username already taken</string>
    <string name="account">Account</string>
    <string name="step_goal">Step Goal</string>
    <string name="steps_per_hr">Steps/Hr.</string>
    <string name="steps_projected">Projected Steps</string>
    <string name="shoe_left">Left Shoe</string>
    <string name="shoe_right">Right Shoe</string>
    <string name="status">Status:</string>
    <string name="connect">Connect</string>
    <string name="default_num">--</string>
    <string name="disconnected">disconnected</string>
    <string name="steps_tot">Total Steps</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_filter_uuid">Only devices advertising LBS UUID</string>
    <string name="menu_filter_nearby">Only nearby devices</string>

    <string name="unknown_device">Unknown Device</string>
    <string name="turn_on">On</string>
    <string name="turn_off">Off</string>
    <string name="title_led_state">LED</string>
    <string name="title_button_state">Button</string>
    <string name="state">State</string>
    <string name="button_pressed">PRESSED</string>
    <string name="button_released">RELEASED</string>
    <string name="button_unknown">UNKNOWN</string>
    <string name="led_summary">Toggle the switch to turn the LED 3 on or off.</string>
    <string name="button_summary">Press Button 1 on the dev kit.</string>

    <string name="location_permission_title">LOCATION PERMISSION REQUIRED</string>
    <string name="location_permission_info">From Android 6.0 Marshmallow onwards the application requires Location permission in order to scan for Bluetooth Low Energy devices.
      \n\nThis is because Bluetooth LE beacons, for example iBeacons or Eddystone, may be used to determine the phone\'s and user\'s location. <b>nRF Blinky</b> will not use this information in any way.</string>
    <string name="location_permission_action">Grant permission</string>
    <string name="location_permission_settings">Settings</string>

    <string name="bluetooth_disabled_title">BLUETOOTH DISABLED</string>
    <string name="bluetooth_disabled_info">The Bluetooth adapter is turned off. Click the button below to enable it.</string>
    <string name="bluetooth_disabled_action">Enable</string>

    <string name="blinky_guide_title">CAN\'T SEE YOUR BLINKY?</string>
    <string name="blinky_guide_info">1. Make sure the DK is <b>turned on</b> and is connected to a power source using a micro USB cable or a coin cell is plugged in.
        \n\n2. Make sure the <b>ble_app_blinky</b> firmware and SoftDevice are flashed.</string>
    <string name="blinky_guide_location_info">3. Location is turned off. Some Android phones require it enabled in order to scan for Bluetooth LE devices.
		If you are sure your Blinky is advertising and it doesn\'t show up here, click the button below to enable Location.</string>
    <string name="blinky_guide_location_action">Enable</string>

    <string name="not_supported_title">DEVICE NOT SUPPORTED</string>
    <string name="not_supported_info">1. The Blinky service hasn\'t been found on the device\'s attribute table.
		\n\n2. Make sure the DK is flashed with the correct firmware.
		\n\n3. If you used the DK with another firmware before, the old services might have been cached by the system.</string>
    <string name="not_supported_action">Fix and try again</string>

    <string name="state_scanning">Scanning…</string>
    <string name="state_connecting">Connecting…</string>
    <string name="state_discovering_services">Discovering services…</string>
    <string name="state_initializing">Initializing…</string>
    <string name="state_disconnected">Device disconnected.</string>
    <string name="feature_name">BLINKY</string>
</resources>
